Fix: Prevent white outline when holding shift and clicking on UI elements

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -89,3 +89,8 @@ body,
     width: 100%;
     overflow: auto;
 }
+
+*:focus-visible {
+  outline: none !important;
+  box-shadow: unset !important;
+}
